--- a/packt-react-and-react-native/package.json
+++ b/packt-react-and-react-native/package.json
@@ -13,7 +13,8 @@
     "@faker-js/faker": "^9.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
