--- a/packt-react-and-react-native/tsconfig.node.json
+++ b/packt-react-and-react-native/tsconfig.node.json
@@ -4,7 +4,8 @@
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
-
+    "composite": true,
+    "allowSyntheticDefaultImports": true,
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
