--- a/jobs-app/package.json
+++ b/jobs-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "jobs-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.2.3",
+    "@emotion/react": "^11.14.0",
+    "next": "15.0.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "next": "15.0.3",
+    "react-icons": "^5.4.0",
     "react-hook-form": "^7.54.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "eslint-config-next": "15.0.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "postcss": "^8",
+    "prettier": "^3.4.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
